--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,12 @@ edition = "2021"
 
 [dependencies]
 prost = "0.12.3"
-tokio = "1.35.1"
+sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
+thiserror = "1.0.56"
+tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 tonic = "0.10.2"
+tonic-reflection = "0.10.2"
+uuid = { version = "1.6.1", features = ["v7"] }
 
 [build-dependencies]
 tonic-build = "0.10.2"
