--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.12.0"
+log = "0.4.20"
 prost = "0.12.3"
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
 thiserror = "1.0.56"
