--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ itertools = "0.12.0"
 log = "0.4.20"
 prost = "0.12.3"
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
+test-case = "3.3.1"
 thiserror = "1.0.56"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 tonic = "0.10.2"
