--- a/odr-admin/Cargo.toml
+++ b/odr-admin/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 dioxus = "0.4.3"
 dioxus-web = "0.4.3"
+common = { path = "../common" }
+tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
+tonic-web-wasm-client = "0.5.0"
+dioxus-logger = "0.4.1"
+log = "0.4.20"
