--- a/odr-admin/Cargo.toml
+++ b/odr-admin/Cargo.toml
@@ -13,3 +13,4 @@ tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"
 tonic-web-wasm-client = "0.5.0"
 dioxus-logger = "0.4.1"
 log = "0.4.20"
+dioxus-router = "0.4.3"
