--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -19,3 +19,6 @@ uuid = { version = "1.6.1", features = ["v7"] }
 common = { path = "../common", features = ["transport"] }
 tonic-web = "0.10.2"
 bcrypt = "0.15.0"
+chrono = "0.4.31"
+rand = "0.8.5"
+p256 = "0.13.2"
