--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -23,3 +23,5 @@ chrono = "0.4.31"
 rand = "0.8.5"
 p256 = "0.13.2"
 argon2 = "0.5.3"
+axum = "0.7.4"
+serde = { version = "1.0.195", features = ["derive"] }
