--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -21,7 +21,7 @@ tonic-web = "0.10.2"
 bcrypt = "0.15.0"
 chrono = "0.4.31"
 rand = "0.8.5"
-p256 = "0.13.2"
 argon2 = "0.5.3"
 axum = "0.7.4"
 serde = { version = "1.0.195", features = ["derive"] }
+ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
