--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -19,9 +19,11 @@ uuid = { version = "1.6.1", features = ["v7"] }
 common = { path = "../common", features = ["transport"] }
 tonic-web = "0.10.2"
 bcrypt = "0.15.0"
-chrono = "0.4.31"
+chrono = { version = "0.4.31", features = ["serde"] }
 rand = "0.8.5"
 argon2 = "0.5.3"
 axum = "0.7.4"
 serde = { version = "1.0.195", features = ["derive"] }
-ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
+ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"] }
+axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
+jsonwebtoken = "9.2.0"
