--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -27,3 +27,4 @@ serde = { version = "1.0.195", features = ["derive"] }
 ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"] }
 axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
 jsonwebtoken = "9.2.0"
+strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
