--- a/odr-admin/Dioxus.toml
+++ b/odr-admin/Dioxus.toml
@@ -11,7 +11,6 @@ watch_path = ["src", "public"]
 index_on_404 = true
 
 [web.resource]
-style = ["https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.css"]
-script = ["https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.js"]
+style = ["https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"]
 
 [web.resource.dev]
