--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = [ "common", "odr-admin", "odr-server", ]
+members = [ "common", "odr-admin", "odr-server", "tmp", ]
