--- a/odr-admin/Cargo.toml
+++ b/odr-admin/Cargo.toml
@@ -16,6 +16,7 @@ log = "0.4.20"
 dioxus-router = "0.4.3"
 anyhow = "1.0.79"
 strum_macros = "0.25.3"
-strum = "0.25.0"
+strum = { version = "0.25.0", features = ["derive"] }
 futures = "0.3.30"
 uuid = { version = "1.7.0", features = ["v4", "js"] }
+itertools = "0.12.1"
