--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 prost = "0.12.3"
 tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
+serde = { version = "1.0.195", features = ["derive"] }
 
 [build-dependencies]
 tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
