--- a/odr-admin/Cargo.toml
+++ b/odr-admin/Cargo.toml
@@ -20,3 +20,8 @@ strum = { version = "0.25.0", features = ["derive"] }
 futures = "0.3.30"
 uuid = { version = "1.7.0", features = ["v4", "js"] }
 itertools = "0.12.1"
+gloo-net = "0.5.0"
+gloo-utils = "0.2.0"
+wasm-bindgen = "=0.2.90"
+serde_json = "1.0.114"
+web-sys = "=0.3.67"
