--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -37,3 +37,4 @@ ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"] 
 axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
 jsonwebtoken = "9.2.0"
 strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
+tower-http = { version = "0.5.2", features = ["cors", "trace"] }
