--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -31,10 +31,9 @@ bcrypt = "0.15.0"
 chrono = { version = "0.4.31", features = ["serde"] }
 rand = "0.8.5"
 argon2 = "0.5.3"
-axum = "0.7.4"
 serde = { version = "1.0.195", features = ["derive"] }
 ed25519-dalek = { version = "2.1.0", features = ["rand_core", "pkcs8", "alloc"] }
-axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
 jsonwebtoken = "9.2.0"
 strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
-tower-http = { version = "0.5.2", features = ["cors", "trace"] }
+http = "0.2.11"
+cookie = "0.18.0"
