Add is_logged_in endpoint

--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -37,3 +37,4 @@ jsonwebtoken = "9.2.0"
 strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
 http = "0.2.11"
 cookie = "0.18.0"
+time = "0.3.34"
