--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 prost = "0.12.3"
 tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
 serde = { version = "1.0.195", features = ["derive"] }
+prost-types = "0.12.3"
 
 [build-dependencies]
 tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
