--- a/odr-admin/Cargo.toml
+++ b/odr-admin/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { version = "0.5.0", features = ["router", "web"] }
+dioxus = { version = "=0.5.1", features = ["router", "web"] }
 common = { path = "../common" }
 tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
 tonic-web-wasm-client = "0.5.0"
