Update to dioxus 0.6.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,15 @@
 [workspace]
 resolver = "2"
 members = [ "common", "odr-admin", "odr-cmd", "odr-server" ]
+
+[profile]
+
+[profile.wasm-dev]
+inherits = "dev"
+opt-level = 1
+
+[profile.server-dev]
+inherits = "dev"
+
+[profile.android-dev]
+inherits = "dev"
