--- a/odr-cmd/Cargo.toml
+++ b/odr-cmd/Cargo.toml
@@ -8,6 +8,6 @@ anyhow = "1.0.81"
 clap = { version = "4.5.3", features = ["derive"] }
 sqlx = "0.7.4"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
-odr-server = { path = "../odr-server" }
+odr-core = { path = "../odr-core" }
 common = { path = "../common", features = ["transport"] }
 inquire = "0.7.2"
