--- a/odr-admin/Cargo.toml
+++ b/odr-admin/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { version = "=0.6.0", features = ["router", "web"] }
+dioxus = { git = "https://github.com/dioxusLabs/dioxus.git", rev = "857c3e232ecd024c752176bd0af14a5654014527", features = ["router", "web"] }
 common = { path = "../common" }
 tonic = { version="0.10.2", default-features=false, features=["codegen", "prost"]}
 tonic-web-wasm-client = "0.5.0"
@@ -19,6 +19,6 @@ uuid = { version = "1.7.0", features = ["v4", "js"] }
 itertools = "0.12.1"
 gloo-net = "0.5.0"
 gloo-utils = "0.2.0"
-wasm-bindgen = "=0.2.97"
+wasm-bindgen = "=0.2.99"
 serde_json = "1.0.114"
-web-sys = "=0.3.74"
+web-sys = "=0.3.76"
