--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -41,6 +41,7 @@ odr-core = { path = "../odr-core", optional = true }
 wasm-bindgen = { version = "=0.2.99", optional = true }
 web-sys = { version = "=0.3.76", optional = true }
 tonic-web-wasm-client = { version = "0.6.0", optional = true }
+tracing = "0.1.41"
 
 [features]
 web = ["dioxus/web", "dep:wasm-bindgen", "dep:web-sys", "dep:tonic-web-wasm-client"]
