--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "common", "odr-admin", "odr-cmd", "odr-core", "odr-server"]
+members = [ "common", "odr-cmd", "odr-core", "odr-server"]
 
 [profile]
 
