--- a/odr-server/Cargo.toml
+++ b/odr-server/Cargo.toml
@@ -19,14 +19,14 @@ serde = { version = "1.0.195", features = ["derive"] }
 strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
 dioxus = { git = "https://github.com/dioxusLabs/dioxus.git", rev = "857c3e232ecd024c752176bd0af14a5654014527", features = ["router", "fullstack", "logger"] }
 prost = { version = "0.13" }
-common = { path = "../common" }
 log = "0.4.20"
 serde_bytes = "0.11.15"
 uuid = { version = "1.7.0", features = ["v4", "js", "v7"] }
 futures = { version = "0.3.31" }
-tonic = { version = "0.12", default-features = false }
+tonic = { version = "0.12", default-features = false, features = ["codegen", "prost"] }
 thiserror = "1.0.56"
 itertools = "0.12.1"
+prost-types = "0.13"
 
 # Server
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"], optional = true }
@@ -40,7 +40,6 @@ jsonwebtoken = { version = "9.2.0", optional = true }
 http = { version = "1.1.0", optional = true }
 cookie = { version = "0.18.0", optional = true }
 time = { version = "0.3.34", optional = true }
-prost-types = { version = "0.13", optional = true }
 axum = { version = "0.7.9", optional = true }
 dioxus-liveview = { git = "https://github.com/dioxusLabs/dioxus.git", rev = "857c3e232ecd024c752176bd0af14a5654014527", optional = true }
 dioxus-cli-config = { git = "https://github.com/dioxusLabs/dioxus.git", rev = "857c3e232ecd024c752176bd0af14a5654014527", optional = true }
@@ -55,6 +54,9 @@ web-sys = { version = "=0.3.76", optional = true }
 tonic-web-wasm-client = { version = "0.6.0", optional = true }
 tracing = "0.1.41"
 
+[build-dependencies]
+tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
+
 [features]
 web = ["dioxus/web", "dep:wasm-bindgen", "dep:web-sys", "dep:tonic-web-wasm-client"]
-server = ["dioxus/server", "dep:sqlx", "dep:tokio", "dep:tonic-reflection", "dep:tonic-web", "dep:chrono", "dep:argon2", "dep:ed25519-dalek", "dep:jsonwebtoken", "dep:http", "dep:cookie", "dep:prost-types", "dep:time", "dep:axum", "dep:dioxus-liveview", "dep:dioxus-cli-config", "dep:clap", "dep:anyhow", "dep:inquire", "dep:rand", "common/transport", "tonic/default"]
+server = ["dioxus/server", "dep:sqlx", "dep:tokio", "dep:tonic-reflection", "dep:tonic-web", "dep:chrono", "dep:argon2", "dep:ed25519-dalek", "dep:jsonwebtoken", "dep:http", "dep:cookie", "dep:time", "dep:axum", "dep:dioxus-liveview", "dep:dioxus-cli-config", "dep:clap", "dep:anyhow", "dep:inquire", "dep:rand", "tonic/default", "tonic-build/transport"]
