--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,9 @@ web-sys = { version = "=0.3.76", optional = true }
 tonic-web-wasm-client = { version = "0.6.0", optional = true }
 tracing = "0.1.41"
 
+[dev-dependencies]
+test-case = "3.3.1"
+
 [build-dependencies]
 tonic-build = { version = "0.12", default-features = false, features = ["prost"] }
 
