--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ wasm-bindgen = { version = "=0.2.99", optional = true }
 web-sys = { version = "=0.3.76", optional = true }
 tonic-web-wasm-client = { version = "0.6.0", optional = true }
 tracing = "0.1.41"
+pin-project = "1.1.10"
 
 [dev-dependencies]
 test-case = "3.3.1"
