--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,9 @@ tonic = { version = "0.12", default-features = false, features = ["codegen", "pr
 thiserror = "1.0.56"
 itertools = "0.12.1"
 prost-types = "0.13"
+tracing = "0.1.41"
+pin-project = "1.1.10"
+mockall = "0.13.1"
 
 # Server
 sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"], optional = true }
@@ -54,8 +57,6 @@ tower = { version = "0.4.13", optional = true }
 wasm-bindgen = { version = "=0.2.99", optional = true }
 web-sys = { version = "=0.3.76", optional = true }
 tonic-web-wasm-client = { version = "0.6.0", optional = true }
-tracing = "0.1.41"
-pin-project = "1.1.10"
 
 [dev-dependencies]
 test-case = "3.3.1"
